--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,10 +41,10 @@ jobs:
           git submodule init
           git submodule update
           gmake package FINALPACKAGE=1 STRIP=0 THEOS_MAKE_PATH=theos/makefiles
-          cd packages && mv *.ipa "`basename *.ipa .ipa`.tipa"
+          # cd packages && mv *.ipa "`basename *.ipa .ipa`.tipa" # Removed as we are building a Tweak (.deb)
 
       - name: Upload artifact
         uses: actions/upload-artifact@main
         with:
           name: artifact
-          path: packages/*.tipa
+          path: packages/*.deb
